--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ excerpt_separator: ""
 pygments: true
 markdown: kramdown
 url: http://myfonj.github.io
-title: Fixme: Site title
+title: "Fixme: Site title"
 email: myfonj@gmail.com
 author: myf
-description: Fixme: Description
+description: "Fixme: Description"
 paginate: 10
 google_analytics: 
