--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 excerpt_separator: ""
-pygments: true
+highlighter: rogue
 markdown: kramdown
 url: http://myfonj.github.io
 title: "Fixme: Site title"
